@@ -209,5 +209,8 @@ The authors of this program may be contacted at http://forum.princed.org
 // Enable screenshot features.
 #define USE_SCREENSHOT
 
+// Automatically switch to keyboard or joystick/gamepad mode if there is input from that device.
+// Useful if SDL detected a gamepad but there is none.
+#define USE_AUTO_INPUT_MODE
 
 #endif
